--- a/content/post/il-2025-10.adoc
+++ b/content/post/il-2025-10.adoc
@@ -25,6 +25,7 @@ Try it out and let me know what you think.
 +
 {{< video src="/images/2025/10/flink-watermarks.wtf" autoplay="true" muted="true" loop="true" controls="false" >}}
 * I gave a talk about link:/talk/blog-writing-for-developers/[Blog Writing for Developers] - check out the link for slides and audio recording
+* I was a guest on the Confluent Developer podcast - 🎥 https://www.youtube.com/watch?v=U0t5cCl9BWM[video here], 🎧 https://confluent.buzzsprout.com/186154/episodes/18059785-how-kafka-expert-robin-moffat-tackles-open-source-problems-ep-6[audio here]
 
 With that, on with the interesting links!
 
@@ -80,7 +81,6 @@ Adding this to my list to try out and write about myself, definitely :)
 * In a similar vein, Yuxia Luo has published https://github.com/luoyuxia/duckdb-extension-fluss[a DuckDB extension to directly query Apache Fluss].
 * Very cool blog post from the team at Grab on https://engineering.grab.com/ml-predictive-autoscaling-for-flink[using machine learning to predict workloads and scale Flink automagically].
 * Milind Srivastava and colleagues at CMU have published a library of https://github.com/ProjectASAP/FlinkSketch[sketching algorithms] for Flink's DataStream API.
-* Claude Code Skills are the latest hawtness (at least until the next thing comes along tomorrow), and Gordon Murray has published a https://github.com/gordonmurray/data-engineering-skills[set of them] with support for technologies including Flink, Fluss, and Iceberg.
 * Tools to use Flink from https://github.com/exness/go-flink-sql[Go] and https://github.com/devstress/FlinkDotnet[.NET].
 * 🔥 Yennick Trevels has published both a https://kafkastreamsfieldguide.com/articles/kafka-streams-monitoring[Kafka Streams monitoring guide] as well as an excellent https://kafkastreamsfieldguide.com/articles/kafka-streams-grafana-dashboard[Grafana dashboard for Kafka Streams].
 * Flink's Hadoop-rooted support for S3 has caused many travails for lots of people, https://www.decodable.co/blog/troubleshooting-flink-sql-s3-problems[including me]—and the community has recognised this with https://lists.apache.org/thread/2bllhqlbv0pz6t95tsjbszpm9bp9911c[a discussion beginning] about creating native support for S3 within Flink.
@@ -92,37 +92,37 @@ There's some good detail in there about the processing that Flink does, and thei
 
 == Open Table Formats (OTF), Catalogs, etc.
 
-* https://www.alibabacloud.com/blog/building-a-unified-lakehouse-for-large-scale-recommendation-systems-with-apache-paimon-at-tiktok_602568[Building a Unified Lakehouse for Large-Scale Recommendation Systems with Apache Paimon at TikTok - Alibaba Cloud Community]
-* https://www.confluent.io/blog/tableflow-delta-lake-databricks-unity-catalog-ga/[confluent.io/blog/tableflow-delta-lake-databricks-unity-catalog-ga/]
-* https://dipankar-tnt.medium.com/apache-parquet-vs-newer-file-formats-btrblocks-fastlanes-lance-vortex-cdf02130182c[Apache Parquet vs. Newer File Formats (BtrBlocks, FastLanes, Lance, Vortex) \| by Dipankar Mazumdar \| Sep, 2025 \| Medium]
-* https://www.dremio.com/blog/whats-new-in-apache-polaris-1-2-0-fine-grained-access-event-persistence-and-better-federation/[What’s New in Apache Polaris 1.2.0: Fine-Grained Access, Event Persistence, and Better Federation \| Dremio]
-* https://github.com/djouallah/duckrun[GitHub - djouallah/duckrun]
-* https://github.com/microsoft/amudai[GitHub - microsoft/amudai]
-* https://github.com/indextables/indextables_spark/[GitHub - indextables/indextables\_spark: IndexTables is an experimental open-table format for Apache Spark that enables fast retrieval and full-text search across large-scale data. It integrates seamlessly with Spark SQL, allowing you to combine powerful search capabilities with joins, aggregations, and standard SQL operations.]
-* https://github.com/apache/gravitino/releases/tag/v1.0.0[Release Apache Gravitino 1.0.0 · apache/gravitino · GitHub]
-* https://graphar.apache.org/blog/graphs-openlakehouse/[Dreaming of Graphs in the Open Lakehouse \| Apache GraphAr]
-* https://jack-vanlightly.com/blog/2025/10/8/beyond-indexes-how-open-table-formats-optimize-query-performance[Beyond Indexes: How Open Table Formats Optimize Query Performance — Jack Vanlightly]
-* https://www.linkedin.com/posts/anton-s-borisov_breaking-the-ice-with-starrocks-activity-7388980467749863424-bmT3[Breaking the Ice with StarRocks \| Anton Borisov]
-* https://medium.com/fresha-data-engineering/iceberg-cdc-stream-a-little-dream-of-me-a7c9f9e6e11d[Iceberg CDC: Stream a Little Dream of Me \| by Anton Borisov \| fresha-data-engineering \| Oct, 2025 \| Medium]
-* https://medium.com/@yingjunwu/we-built-an-open-source-s3-tables-alternative-2b3c95ef4b3a[We Built an Open Source S3 Tables Alternative \| by Yingjun Wu \| Oct, 2025 \| Data Engineer Things]
-* https://medium.com/expedia-group-tech/why-you-should-prefer-merge-into-over-insert-overwrite-in-apache-iceberg-b6b130cc27d2[Why You Should Prefer MERGE INTO Over INSERT OVERWRITE in Apache Iceberg \| by Vincent DANIEL \| Expedia Group Technology \| Sep, 2025 \| Medium]
-* https://www.onehouse.ai/blog/apache-hudi-vs-delta-lake-vs-apache-iceberg-lakehouse-feature-comparison[Apache Iceberg™ vs Delta Lake vs Apache Hudi™ - Feature Comparison Deep Dive]
-* https://www.ssp.sh/brain/data-lake-file-formats/[Data Lake File Formats]
-* https://www.youtube.com/playlist?list=PL3IALGSANhzWxlZpyGgwZiRYjhIStmBdq[Before you continue to YouTube]
-* https://www.youtube.com/playlist?list=PL3IALGSANhzXdkQfSBRaXoHYkOCWd2aUR[Before you continue to YouTube]
+* Shuiqiang Chen describes https://www.alibabacloud.com/blog/building-a-unified-lakehouse-for-large-scale-recommendation-systems-with-apache-paimon-at-tiktok_602568[how TikTok uses Apache Paimon in their recommendation systems].
+* As well as writing from Kafka to Iceberg, Confluent's TableFlow now supports https://www.confluent.io/blog/tableflow-delta-lake-unity-catalog-azure/[writing to Delta Lake, upserts, and dead-letter queues].
+* Iceberg catalog https://polaris.apache.org/[Apache Polaris] has released v1.2, and Alex Merced has written https://www.dremio.com/blog/whats-new-in-apache-polaris-1-2-0-fine-grained-access-event-persistence-and-better-federation/[an article about what's new].
+Meanwhile, https://github.com/apache/gravitino/releases/tag/v1.0.0[Apache Gravitino] (with bigger ambitions beyond just an Iceberg catalog) has released v1.0.
+* Dipankar Mazumdar has a good article comparing https://dipankar-tnt.medium.com/apache-parquet-vs-newer-file-formats-btrblocks-fastlanes-lance-vortex-cdf02130182c[Apache Parquet with newer file formats such as Lance and Vortex].
+If new formats are your thing, https://github.com/indextables/indextables_spark/[IndexTables] describes itself as "an experimental open-table format for Apache Spark that enables fast retrieval and full-text search across large-scale data", whilst https://github.com/microsoft/amudai[Project Amudai] is an "advanced columnar storage format […designed to] address the limitations of existing data lake formats, such as Apache Parquet".
+* I https://speakerdeck.com/rmoff/analysing-the-panama-papers-with-oracle-big-data-spatial-and-graph[do like a property graph], and am interested to look more into https://graphar.apache.org/[Apache GraphAr (incubating)] which Sem Sinchenko describes https://semyonsinchenko.github.io/ssinchenko/post/dreams-about-graph-in-lakehouse/#headline-11[in this article] as a standard for Property Graph storage.
+* Jack's back!
+With a hat-trick of entries in this month's post, here he's looking at https://jack-vanlightly.com/blog/2025/10/8/beyond-indexes-how-open-table-formats-optimize-query-performance[How Open Table Formats Optimize Query Performance].
+* Fresh'a Anton Borisov is back again with https://medium.com/fresha-data-engineering/iceberg-cdc-stream-a-little-dream-of-me-a7c9f9e6e11d[a look at the proposal for the next version of the Iceberg spec] and how it could improve things when working with CDC data.
+* Vincent Daniel at Expedia writes about https://medium.com/expedia-group-tech/why-you-should-prefer-merge-into-over-insert-overwrite-in-apache-iceberg-b6b130cc27d2[Why You Should Prefer `MERGE INTO` Over `INSERT OVERWRITE`] in Iceberg.
+* Kinda like benchmarks, feature comparisons published by vendors are inheritently biased—whether conciously or not.
+Kyle Weller at Onehouse—who contribute to the Apache Hudi format—has published an updated https://www.onehouse.ai/blog/apache-hudi-vs-delta-lake-vs-apache-iceberg-lakehouse-feature-comparison[feature comparison of Iceberg, Hudi, and Delta Lake].
+You can guess which one comes out on top ;)
+https://imgflip.com/i/aaq1pi[Snark aside], it's still a useful article if only to look at the positioning and strengths of Hudi.
+* Videos from the recent https://www.youtube.com/playlist?list=PL3IALGSANhzXdkQfSBRaXoHYkOCWd2aUR[Greater Seattle] and https://www.youtube.com/playlist?list=PL3IALGSANhzWxlZpyGgwZiRYjhIStmBdq[San Francisco] Iceberg meetups
 
 == AI
 
+_I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[last month]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
+_As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
+
 * I wrote a post trying to get my head around _what_ we mean by link:/2025/10/06/stumbling-into-ai-part-5agents/[Agents].
-* https://basicmemory.com/[Basic Memory - Build Knowledge That Grows With You]
-* https://www.confluent.io/blog/introducing-real-time-context-engine-ai/[confluent.io/blog/introducing-real-time-context-engine-ai/]
-* https://www.confluent.io/blog/2025-q4-streaming-agents-update/[confluent.io/blog/2025-q4-streaming-agents-update/]
-* https://medium.com/confluent/building-streaming-ai-agents-with-flink-sql-on-confluent-cloud-e3bb9fe3337a[Building Streaming AI Agents with Flink SQL on Confluent Cloud \| by Yash anand \| Confluent \| Oct, 2025 \| Medium]
-* https://dpe.org/wp-content/uploads/2024/06/Adam-Huda-and-Ty-Smith-Uber-AI.pptx.pdf[Adam-Huda-and-Ty-Smith-Uber-AI.pptx.pdf]
-* https://flink.apache.org/2025/10/15/apache-flink-agents-0.1.0-release-announcement/[Apache Flink Agents 0.1.0 Release Announcement \| Apache Flink]
-* https://gradientflow.substack.com/p/the-convergence-of-data-ai-and-agents[The Convergence of Data, AI, and Agents: Are You Prepared?]
-* https://simonwillison.net/2025/Oct/16/claude-skills/#skills-compared-to-mcp
-* https://www.infoq.com/presentations/agentic-ai/[Beyond the Hype: Architecting Systems with Agentic AI - InfoQ]
+* https://basicmemory.com/[Basic Memory] is a very cool MCP server that integrates with your AI tool and acts as a memory of your conversations, storing the information locally in Markdown.
+It integrates very neatly with Obsidian.
+I'm a big fan.
+* Confluent announced a bunch of neat stuff at Current this week including a https://www.confluent.io/blog/introducing-real-time-context-engine-ai/[real time context engine] and https://www.confluent.io/blog/2025-q4-streaming-agents-update/[streaming agents].
+Product blog posts are m'kay I guess but I always like to see the hands-on detail, and so I enjoyed reading my colleague Yash Anand's example of https://medium.com/confluent/building-streaming-ai-agents-with-flink-sql-on-confluent-cloud-e3bb9fe3337a[building with streaming agents].
+* Very cool talk (https://www.youtube.com/watch?v=jp-fBw07r7c[video] / https://dpe.org/wp-content/uploads/2024/06/Adam-Huda-and-Ty-Smith-Uber-AI.pptx.pdf[slides]) from Ty Smith and Adam Huda with real-world examples of how Uber's developers are using AI and what benefits they're seeing.
+* https://flink.apache.org/2025/10/15/apache-flink-agents-0.1.0-release-announcement/[Apache Flink Agents] is a sub-project of Apache Flink, and they just had their first release.
+* https://www.anthropic.com/news/skills[Claude Skills] are the https://simonwillison.net/2025/Oct/16/claude-skills/#skills-compared-to-mcp[latest hawtness] (at least until the next thing comes along tomorrow), and Gordon Murray has published a https://github.com/gordonmurray/data-engineering-skills[set of them] with support for technologies including Flink, Fluss, and Iceberg.
 
 == General Data Stuff
 
@@ -192,3 +192,12 @@ TIP: If you like these kind of links you might like to read about https://rmoff.
 * https://www.linkedin.com/posts/sap1ens_flinkforward-activity-7384143771803934720-iJaD/[VERA-X: Ververica's Flink Accelerator vs Iron Vector \| Yaroslav Tkachenko posted on the topic \| LinkedIn]
 * https://medium.com/@avikm744/why-we-have-chosen-fluvio-over-apache-flink-c16ec9284b8b[Why We have Chosen Fluvio over Apache Flink? \| by Avik Mukherjee \| Oct, 2025 \| Medium]
 * https://medium.com/google-cloud/dataflow-kafka-offset-deduplication-06770942c325[Introducing Kafka Offset Deduplication for Dataflow \| by Tom Stepp \| Google Cloud - Community \| Oct, 2025 \| Medium]
+* https://medium.com/@yingjunwu/we-built-an-open-source-s3-tables-alternative-2b3c95ef4b3a[We Built an Open Source S3 Tables Alternative \| by Yingjun Wu \| Oct, 2025 \| Data Engineer Things]
+* https://github.com/djouallah/duckrun[GitHub - djouallah/duckrun]
+* https://www.infoq.com/presentations/agentic-ai/[Beyond the Hype: Architecting Systems with Agentic AI - InfoQ]
+* https://gradientflow.substack.com/p/the-convergence-of-data-ai-and-agents[The Convergence of Data, AI, and Agents: Are You Prepared?]
+
+
+== Future?
+* https://www.ssp.sh/brain/data-lake-file-formats/[Data Lake File Formats]
+* https://www.linkedin.com/posts/anton-s-borisov_breaking-the-ice-with-starrocks-activity-7388980467749863424-bmT3[Breaking the Ice with StarRocks \| Anton Borisov]
