--- a/content/post/il-2025-10.adoc
+++ b/content/post/il-2025-10.adoc
@@ -66,6 +66,7 @@ If you notice a recurring theme of Spark cost and performance optimisation then 
 * Klaviyo's Chinmay Sawaji has written a good post explaining how they https://klaviyo.tech/building-a-resilient-event-publisher-with-dual-failure-capture-518749cb5600[build their Kafka producers to be resilient to failures].
 * In a fantastic example of both "just because I can" _and_ "I'm going to explain this thing using a cool example", Leandro Proença shows how to https://leandronsp.com/articles/you-dont-need-kafka-building-a-message-queue-with-only-two-unix-signals[rebuild Kafka using UNIX signals].
 * In a somewhat more serious approach (I think?) Stanislav Kozlovski makes the case for https://topicpartition.io/blog/postgres-pubsub-queue-benchmarks[using Postgres instead of Kafka in many situations].
+Oliver Russell wrote about how is team actually do use https://leontrolski.github.io/postgres-as-queue.html[Postgres as a queue].
 * Backfilling data in Kafka is definitely a "day 2" type problem, but a real one—and https://nejckorasa.github.io/posts/kafka-backfill/[Nejc Korasa has a nice write-up] of some of the patterns to consider.
 * A https://github.com/j3-signalroom/kafka_cluster-topic-key_distribution_analyzer-tool[tool] from Jeffrey Jonathan Jennings to https://thej3.com/you-cant-optimize-what-you-can-t-measure-4db0cbf99b9b[analyse key distribution] and help avoid hot partitions.
 * Probably the biggest discussion in the Apache Kafka community at the moment is the direction of the project with regards to "Diskless" (or "Direct-to-S3").
@@ -97,8 +98,10 @@ There's some good detail in there about the processing that Flink does, and thei
 * Iceberg catalog https://polaris.apache.org/[Apache Polaris] has released v1.2, and Alex Merced has written https://www.dremio.com/blog/whats-new-in-apache-polaris-1-2-0-fine-grained-access-event-persistence-and-better-federation/[an article about what's new].
 Meanwhile, https://github.com/apache/gravitino/releases/tag/v1.0.0[Apache Gravitino] (with bigger ambitions beyond just an Iceberg catalog) has released v1.0.
 * Dipankar Mazumdar has a good article comparing https://dipankar-tnt.medium.com/apache-parquet-vs-newer-file-formats-btrblocks-fastlanes-lance-vortex-cdf02130182c[Apache Parquet with newer file formats such as Lance and Vortex].
-If new formats are your thing, https://github.com/indextables/indextables_spark/[IndexTables] describes itself as "an experimental open-table format for Apache Spark that enables fast retrieval and full-text search across large-scale data", whilst https://github.com/microsoft/amudai[Project Amudai] is an "advanced columnar storage format […designed to] address the limitations of existing data lake formats, such as Apache Parquet".
+If new formats are your thing, a recent SIGMOD paper announced the open-source https://db.cs.cmu.edu/papers/2025/zeng-sigmod2025.pdf[F3 (Future-proof File Format)].
+Also doing the rounds this month was news of https://github.com/indextables/indextables_spark/[IndexTables] describes itself as "an experimental open-table format for Apache Spark that enables fast retrieval and full-text search across large-scale data", whilst https://github.com/microsoft/amudai[Project Amudai] is an "advanced columnar storage format […designed to] address the limitations of existing data lake formats, such as Apache Parquet".
 * I https://speakerdeck.com/rmoff/analysing-the-panama-papers-with-oracle-big-data-spatial-and-graph[do like a property graph], and am interested to look more into https://graphar.apache.org/[Apache GraphAr (incubating)] which Sem Sinchenko describes https://semyonsinchenko.github.io/ssinchenko/post/dreams-about-graph-in-lakehouse/#headline-11[in this article] as a standard for Property Graph storage.
+In other graph news, DuckDB has a https://duckdb.org/community_extensions/extensions/duckpgq[graph community extension] that Daniël ten Wolde https://duckdb.org/2025/10/22/duckdb-graph-queries-duckpgq#property-graphs-in-duckdb[shows in action here].
 * Jack's back!
 With a hat-trick of entries in this month's post, here he's looking at https://jack-vanlightly.com/blog/2025/10/8/beyond-indexes-how-open-table-formats-optimize-query-performance[How Open Table Formats Optimize Query Performance].
 * Fresh'a Anton Borisov is back again with https://medium.com/fresha-data-engineering/iceberg-cdc-stream-a-little-dream-of-me-a7c9f9e6e11d[a look at the proposal for the next version of the Iceberg spec] and how it could improve things when working with CDC data.
@@ -123,29 +126,28 @@ Product blog posts are m'kay I guess but I always like to see the hands-on detai
 * Very cool talk (https://www.youtube.com/watch?v=jp-fBw07r7c[video] / https://dpe.org/wp-content/uploads/2024/06/Adam-Huda-and-Ty-Smith-Uber-AI.pptx.pdf[slides]) from Ty Smith and Adam Huda with real-world examples of how Uber's developers are using AI and what benefits they're seeing.
 * https://flink.apache.org/2025/10/15/apache-flink-agents-0.1.0-release-announcement/[Apache Flink Agents] is a sub-project of Apache Flink, and they just had their first release.
 * https://www.anthropic.com/news/skills[Claude Skills] are the https://simonwillison.net/2025/Oct/16/claude-skills/#skills-compared-to-mcp[latest hawtness] (at least until the next thing comes along tomorrow), and Gordon Murray has published a https://github.com/gordonmurray/data-engineering-skills[set of them] with support for technologies including Flink, Fluss, and Iceberg.
+* As well as changing how we get things done, AI is probably going to change how we build platforms too.
+Ananth Packkildurai has a good analysis[https://www.dataengineeringweekly.com/p/what-supporting-our-ai-overlords] of two papers looking at how Agents use data and how systems might be better designed for that, and
+Ciro Greco looks at how Agents involved in carrying out data engineering tasks might https://gradientflow.substack.com/p/the-convergence-of-data-ai-and-agents[drive platform requirements].
 
 == General Data Stuff
 
-* https://www.datadoghq.com/blog/engineering/husky-query-architecture/[Inside Husky’s query engine: Real-time access to 100 trillion events \| Datadog]
-* https://www.dataengineeringweekly.com/p/what-supporting-our-ai-overlords[What “Supporting Our AI Overlords” and “Semantic Spacetime” Tell Us About the Future of Data Infrastructure]
-* https://datamethods.substack.com/p/sql-anti-patterns-you-should-avoid[SQL Anti-Patterns You Should Avoid - by Jordan Goodman]
-* https://datamonkeysite.com/2025/10/19/running-duckdb-at-10-tb-scale/[Running DuckDB at 10 TB scale – Small Data And self service]
-* https://db.cs.cmu.edu/papers/2025/zeng-sigmod2025.pdf[db.cs.cmu.edu/papers/2025/zeng-sigmod2025.pdf]
-* https://duckdb.org/2025/10/22/duckdb-graph-queries-duckpgq[Uncovering Financial Crime with DuckDB and Graph Queries – DuckDB]
-* https://github.com/Basekick-Labs/arc[GitHub - Basekick-Labs/arc: High-performance time-series database. 2.4M metrics/sec + 950K logs/sec + 940K traces/sec + 940K events/sec. One endpoint, one protocol. DuckDB + Parquet + Arrow. AGPL-3.0]
-* https://jyu.dev/blog/why-dev-null-is-an-acid-compliant-database/[Why /dev/null Is an ACID Compliant Database • Joey's HQ]
-* https://kb.databasedesignbook.com/posts/systematic-design-of-join-queries/[Systematic design of multi-join GROUP BY queries \| Database Design Book]
-* https://leontrolski.github.io/postgres-as-queue.html[leontrolski - postgres as queue]
-* https://www.nan.fyi/database[Build Your Own Database]
-* https://planetscale.com/blog/benchmarking-postgres-17-vs-18[Benchmarking Postgres 17 vs 18 — PlanetScale]
-* https://practicaldatamodeling.substack.com/p/how-to-sell-data-modeling[How to Sell Data Modeling - by Joe Reis]
-* https://www.reddit.com/r/dataengineering/comments/1o6sfce/realtime_data_analytics_at_scale_integrating/[Reddit - The heart of the internet]
-* https://xtdb.com/blog/launching-xtdb-v2[Launching XTDB v2 — time-travel SQL database to simplify compliance · XTDB]
-* https://yokota.blog/2025/10/07/json-schema-compatibility-and-the-robustness-principle/[JSON Schema Compatibility and the Robustness Principle – Robert Yokota]
-* https://www.youtube.com/watch?v=Ni1SGhNu-Q4[Scaling Postgres to the next level at OpenAI (PGConf.dev 2025) - YouTube]
+* Datadog process over _100 *trillion* events per day_, and wrote their own event store called Husky to handle it.
+They've written previously about how it handles https://www.datadoghq.com/blog/engineering/husky-deep-dive/[exactly-once ingestion] and https://www.datadoghq.com/blog/engineering/husky-storage-compaction/[compaction], and in their most recent post Sami Tabet explains how they built its https://www.datadoghq.com/blog/engineering/husky-query-architecture/[interactive querying capabilities].
+* A nice concise list from Jordan Goodman of https://datamethods.substack.com/p/sql-anti-patterns-you-should-avoid[SQL Anti-Patterns You Should Avoid].
+* What happens when you run DuckDB with a 10TB dataset on a 64 core/512GB machine?
+Mimoune Djouallah https://datamonkeysite.com/2025/10/19/running-duckdb-at-10-tb-scale/[found out].
+* https://github.com/Basekick-Labs/arc[Arc] is a time-series database built on DuckDB, Parquet, and Arrow, and claims ingestion rates of 2.4M records/sec.
+* Alexey Makhotkin has some excellent content on his blog, including this one looking at the https://kb.databasedesignbook.com/posts/systematic-design-of-join-queries/[systematic design of multi-join `GROUP BY` queries].
+* Having recently helped build https://flink-watermarks.wtf/ I now pay much more attention to examples of _scrollytelling_—and this one from Nanda Syahrasyad showing how to https://www.nan.fyi/database[Build Your Own Database] is really good!
+* Postgres 18 was released recently, and Ben Dicken did some https://planetscale.com/blog/benchmarking-postgres-17-vs-18[benchmarking comparing it to Postgres 17]
+* https://practicaldatamodeling.substack.com/p/how-to-sell-data-modeling[Practical advice from Joe Reis on data modeling]—specifically, how to get buy-in from your company to actually do it properly.
+* Described as an "open-source immutable SQL database with comprehensive time-travel", XTDB https://xtdb.com/blog/launching-xtdb-v2[released v2] earlier this year.
+* Robert Yokota writes about the Robustness Principle (a.k.a. Postel's Law) in the context of https://yokota.blog/2025/10/07/json-schema-compatibility-and-the-robustness-principle/[JSON Schema compatability].
 
 == Data in Action
 
+* OpenAI spoke at PGConf this year about their https://www.youtube.com/watch?v=Ni1SGhNu-Q4[use of Postgres and experience scaling it].
 * https://aws.amazon.com/blogs/big-data/how-twilio-built-a-multi-engine-query-platform-using-amazon-athena-and-open-source-presto/[How Twilio built a multi-engine query platform using Amazon Athena and open-source Presto \| AWS Big Data Blog]
 * https://blog.bytebytego.com/p/how-openai-uses-kubernetes-and-apache[How OpenAI Uses Kubernetes And Apache Kafka for GenAI]
 * https://clickhouse.com/blog/netflix-petabyte-scale-logging[How Netflix optimized its petabyte-scale logging system with ClickHouse]
@@ -195,9 +197,11 @@ TIP: If you like these kind of links you might like to read about https://rmoff.
 * https://medium.com/@yingjunwu/we-built-an-open-source-s3-tables-alternative-2b3c95ef4b3a[We Built an Open Source S3 Tables Alternative \| by Yingjun Wu \| Oct, 2025 \| Data Engineer Things]
 * https://github.com/djouallah/duckrun[GitHub - djouallah/duckrun]
 * https://www.infoq.com/presentations/agentic-ai/[Beyond the Hype: Architecting Systems with Agentic AI - InfoQ]
-* https://gradientflow.substack.com/p/the-convergence-of-data-ai-and-agents[The Convergence of Data, AI, and Agents: Are You Prepared?]
+
 
 
 == Future?
 * https://www.ssp.sh/brain/data-lake-file-formats/[Data Lake File Formats]
 * https://www.linkedin.com/posts/anton-s-borisov_breaking-the-ice-with-starrocks-activity-7388980467749863424-bmT3[Breaking the Ice with StarRocks \| Anton Borisov]
+* https://jyu.dev/blog/why-dev-null-is-an-acid-compliant-database/[Why /dev/null Is an ACID Compliant Database • Joey's HQ]
+* https://www.reddit.com/r/dataengineering/comments/1o6sfce/realtime_data_analytics_at_scale_integrating/[Reddit - The heart of the internet]
