--- a/content/post/il-2025-10.adoc
+++ b/content/post/il-2025-10.adoc
@@ -147,18 +147,15 @@ Mimoune Djouallah https://datamonkeysite.com/2025/10/19/running-duckdb-at-10-tb-
 
 == Data in Action
 
-* OpenAI spoke at PGConf this year about their https://www.youtube.com/watch?v=Ni1SGhNu-Q4[use of Postgres and experience scaling it].
-* https://aws.amazon.com/blogs/big-data/how-twilio-built-a-multi-engine-query-platform-using-amazon-athena-and-open-source-presto/[How Twilio built a multi-engine query platform using Amazon Athena and open-source Presto \| AWS Big Data Blog]
-* https://blog.bytebytego.com/p/how-openai-uses-kubernetes-and-apache[How OpenAI Uses Kubernetes And Apache Kafka for GenAI]
-* https://clickhouse.com/blog/netflix-petabyte-scale-logging[How Netflix optimized its petabyte-scale logging system with ClickHouse]
-* https://www.dataengineeringweekly.com/p/engineering-growth-the-data-layers[Engineering Growth: The Data Layers Powering Modern GTM]
-* https://medium.com/starrocks-engineering/how-didi-transformed-real-time-risk-engineering-with-starrocks-33979acc6cb9[Medium]
-* https://medium.com/starrocks-engineering/empowering-instant-insights-how-vbill-payment-powers-real-time-analytics-at-tens-of-billions-scale-c714a5a740aa[VBill Payment: Handling Billions of Records in Real-Time with StarRocks \| by StarRocks Engineering \| StarRocks Engineering \| Oct, 2025 \| Medium]
-* https://netflixtechblog.com/behind-the-streams-real-time-recommendations-for-live-events-e027cb313f8f[Behind the Streams: Real-Time Recommendations for Live Events Part 3 \| by Netflix Technology Blog \| Oct, 2025 \| Netflix TechBlog]
-* https://tech.scribd.com/blog/2025/building-scalable-data-warehouse-backup-system.html[Building a Scalable Data Lake Backup System with AWS \| Scribd Technology]
-* https://tech.kakao.com/posts/777[PostgreSQL to ES: (2) Kafka Connect 트러블슈팅 - tech.kakao.com]
-* https://tech.kakao.com/posts/776[PostgreSQL to ES: (1) Kafka Connect CDC 파이프라인 구성 - tech.kakao.com]
-* https://www.uber.com/blog/rebuilding-ubers-apache-pinot-query-architecture/[Rebuilding Uber’s Apache Pinot™ Query Architecture \| Uber Blog]
+* OpenAI's Bohan Zhang spoke at PGConf this year about their https://www.youtube.com/watch?v=Ni1SGhNu-Q4[use of Postgres and experience scaling it].
+For more details of OpenAI's data platforms check out this blog post summarising https://blog.bytebytego.com/p/how-openai-uses-kubernetes-and-apache[how they deploy Kafka and Flink on Kubernetes].
+* Aakash Pradeep and his colleagues at Twilio built Odin, which is a https://aws.amazon.com/blogs/big-data/how-twilio-built-a-multi-engine-query-platform-using-amazon-athena-and-open-source-presto/[multi-engine query platform enabling them to offer Amazon Athena alongside the existing Presto].
+* Details of how Chinese ride-sharing company DiDi's https://medium.com/starrocks-engineering/how-didi-transformed-real-time-risk-engineering-with-starrocks-33979acc6cb9[evaluation of StarRocks against ClickHouse].
+Also from StarRocks is a look at VBill's https://medium.com/starrocks-engineering/empowering-instant-insights-how-vbill-payment-powers-real-time-analytics-at-tens-of-billions-scale-c714a5a740aa[migration of a real-time data pipeline] from a Kudu/HBase/Hive architecture to StarRocks and some of the optimisations implemented.
+* It's more about _video_ streams than _event_ streams, but this https://netflixtechblog.com/behind-the-streams-live-at-netflix-part-1-d23f917c2f40[three] https://netflixtechblog.com/building-a-reliable-cloud-live-streaming-pipeline-for-netflix-8627c608c967[part] https://netflixtechblog.com/behind-the-streams-real-time-recommendations-for-live-events-e027cb313f8f[series] from Netflix is a fascinating behind-the-scenes explainer of how things work.
+* A two-part series from Kakao describing their https://tech.kakao.com/posts/776[implementation] and https://tech.kakao.com/posts/777[troubleshooting] of a CDC pipeline with Kafka Connect from Postgres to Elasticsearch.
+_It's in Korean but if you open it in Chrome etc the in-browser translation tool will work wonders :)_
+* Ankit Sultana and his colleagues at Uber https://www.uber.com/blog/rebuilding-ubers-apache-pinot-query-architecture/[write about their migration] from a Presto-based proxy in front of Pinot toward a Pinot-native architecture including Pinot's Multi-Stage Engine Lite Mode to serve real-time analytics workloads.
 
 == And finally…
 
@@ -197,6 +194,8 @@ TIP: If you like these kind of links you might like to read about https://rmoff.
 * https://medium.com/@yingjunwu/we-built-an-open-source-s3-tables-alternative-2b3c95ef4b3a[We Built an Open Source S3 Tables Alternative \| by Yingjun Wu \| Oct, 2025 \| Data Engineer Things]
 * https://github.com/djouallah/duckrun[GitHub - djouallah/duckrun]
 * https://www.infoq.com/presentations/agentic-ai/[Beyond the Hype: Architecting Systems with Agentic AI - InfoQ]
+* https://clickhouse.com/blog/netflix-petabyte-scale-logging[How Netflix optimized its petabyte-scale logging system with ClickHouse]
+* https://tech.scribd.com/blog/2025/building-scalable-data-warehouse-backup-system.html[Building a Scalable Data Lake Backup System with AWS \| Scribd Technology]
 
 
 
@@ -205,3 +204,4 @@ TIP: If you like these kind of links you might like to read about https://rmoff.
 * https://www.linkedin.com/posts/anton-s-borisov_breaking-the-ice-with-starrocks-activity-7388980467749863424-bmT3[Breaking the Ice with StarRocks \| Anton Borisov]
 * https://jyu.dev/blog/why-dev-null-is-an-acid-compliant-database/[Why /dev/null Is an ACID Compliant Database • Joey's HQ]
 * https://www.reddit.com/r/dataengineering/comments/1o6sfce/realtime_data_analytics_at_scale_integrating/[Reddit - The heart of the internet]
+* https://www.dataengineeringweekly.com/p/engineering-growth-the-data-layers[Engineering Growth: The Data Layers Powering Modern GTM]
